--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -28,7 +28,7 @@
         max-width: 300px;
       }
     </style>
-    <title>Backdoor</title>
+    <title>Backdoor Casino</title>
   </head>
   <body>
     <div id="app"></div>
